k8s/objectmorph-auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: objectmorph-auth
spec:
  selector:
      matchLabels:
        app: objectmorph-auth
  template:
    metadata:
      labels:
        app: objectmorph-auth
    spec:
      containers:
        - name: objectmorph-auth
          image: docker.io/ennahdi/objectmorph-auth:0.0.1-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: cert-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: cert-volume
          secret:
            secretName: objectmorph-keycloak-tls-secret
        - name: truststore-data
          emptyDir: {}
