k8s/objectmorph-app-service.yml
kind: Service
apiVersion: v1
metadata:
  name: objectmorph-app
spec:
  selector:
    app: objectmorph-app
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
