k8s/objectmorph-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: objectmorph-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - objectmorph.172.31.202.185.nip.io
      secretName: objectmorph-tls-secret
  rules:
    - host: app.objectmorph.172.31.202.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: objectmorph-app
                port:
                  number: 8080
    - host: auth.objectmorph.172.31.202.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: objectmorph-auth-service
                port:
                  number: 8080
